creazione del form

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <title>Document</title>
   </head>
   <body>
+    <form>
+      <label for="petName">Pet name: </label>
+      <input name="petName" id="petName" type="text" placeolder="pet Name" />
+      <label for="ownerName">Owner name: </label>
+      <input name="ownerName" id="ownerName" type="text" placeolder="owner Name" />
+      <label for="species">Species: </label>
+      <input name="species" id="species" type="text" placeolder="species" />
+      <label for="breed">Breed: </label>
+      <input name="breed" id="breed" type="text" placeolder="breed" />
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
